--- a/src/login.html
+++ b/src/login.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Login</title>
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-</head>
-
-<body>
-    <h1>Login with Spotify!</h1>
-    <form action="/auth/login" method="get">
-        <button type="submit">Login</button>
-    </form>
-</body>
-
+    <body>
+        <h1>Login with Spotify!</h1>
+        <form action="/auth/login" method="get">
+            <button type="submit">Login</button>
+        </form>
+    </body>
 </html>
