--- a/src/svg/template.html
+++ b/src/svg/template.html
@@ -20,7 +20,12 @@
             width: 100%;
             border: 0;
             height: 2px;
-            background-image: linear-gradient(to right, transparent, #938AA9, transparent);
+            background-image: linear-gradient(
+                to right,
+                transparent,
+                #938aa9,
+                transparent
+            );
 
             margin: 0.2rem 0rem;
         }
@@ -28,8 +33,10 @@
         h1,
         h2,
         h3 {
-            color: #DCD7BA;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            color: #dcd7ba;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+                Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+                sans-serif;
         }
 
         h1 {
@@ -37,7 +44,7 @@
         }
 
         h2 {
-            font-size: 1.0rem;
+            font-size: 1rem;
         }
 
         h3 {
@@ -51,7 +58,7 @@
         }
 
         .container {
-            background-color: #1F1F28;
+            background-color: #1f1f28;
             border-radius: 10px;
 
             display: flex;
@@ -84,15 +91,18 @@
             margin: 0rem 0.5rem;
         }
 
-        .container-media-headings>* {
+        .container-media-headings > * {
             margin: 0.2rem 0rem;
         }
-
     </style>
     <foreignObject>
         <div xmlns="http://www.w3.org/1999/xhtml" class="container">
             <div class="container-header-item">
-                <img src="/images/spotify-logo.png" alt="Spotify Logo" class="spotify-logo" />
+                <img
+                    src="/images/spotify-logo.png"
+                    alt="Spotify Logo"
+                    class="spotify-logo"
+                />
                 <h1 class="container-header-title">title</h1>
             </div>
 
